--- a/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-manage-pr.yml.j2
@@ -25,6 +25,9 @@ spec:
     - name: is_s3
       type: string
       default: 'false'
+    - name: is_msk
+      type: string
+      default: 'false'
 
   stepTemplate:
     env:
@@ -46,6 +49,8 @@ spec:
         value: $(params.is_efs)
       - name: IS_S3
         value: $(params.is_s3)
+      - name: IS_MSK
+        value: $(params.is_msk)
     envFrom:
       - configMapRef:
           name: environment-properties
@@ -62,10 +67,6 @@ spec:
           git config --global user.password $GITHUB_PAT
 
           CMD="mas gitops-iac-manage-pr -a $ACCOUNT -c $CLUSTER_NAME -m $MAS_INSTANCE_ID --dir /workspace/gitops-iac --github-push --github-host $GITHUB_HOST --github-org $GITHUB_ORG --github-repo $GITHUB_REPO --git-branch $GIT_BRANCH"
-
-          # IS_EFS and IS_S3 are required, default to false if not set
-          CMD="$CMD --is_efs ${IS_EFS:-false}"
-          CMD="$CMD --is_s3 ${IS_S3:-false}"
 
           echo "Executing: $CMD"
           eval $CMD
