--- a/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-apps.yml.j2
@@ -2401,8 +2401,7 @@ spec:
           values: ["deactivate", ""]
         - input: "$(params.mas_edition)"
           operator: in
-          values: ["essentials-maintenance", "standard", "premium"]
-
+          values: ["essentials-maintenance", "standard", "premium", "essentials-inspection", "essentials-space-management", "essentials-lease-management", "essentials-capital-planning"]  
     # 6.2 Manage App
     - name: gitops-deprovision-mas-app-install-manage
       runAfter:
@@ -2429,8 +2428,7 @@ spec:
           values: [""]
         - input: "$(params.mas_edition)"
           operator: in
-          values: ["essentials-maintenance", "standard", "premium"]
-
+          values: ["essentials-maintenance", "standard", "premium", "essentials-inspection", "essentials-space-management", "essentials-lease-management", "essentials-capital-planning"]   
     # 6.3 Manage Database
     - name: gitops-deprovision-db2u-database-manage
       runAfter:
@@ -2457,8 +2455,7 @@ spec:
           values: [""]
         - input: "$(params.mas_edition)"
           operator: in
-          values: ["essentials-maintenance", "standard", "premium"]
-
+          values: ["essentials-maintenance", "standard", "premium", "essentials-inspection", "essentials-space-management", "essentials-lease-management", "essentials-capital-planning"]    
     # 6.4 Manage JDBC Config
     - name: gitops-delete-jdbc-config-manage
       runAfter:
@@ -2498,8 +2495,7 @@ spec:
           values: [""]
         - input: "$(params.mas_edition)"
           operator: in
-          values: ["essentials-maintenance", "standard", "premium"]
-
+          values: ["essentials-maintenance", "standard", "premium", "essentials-inspection", "essentials-space-management", "essentials-lease-management", "essentials-capital-planning"]
     # 6.5 Manage Replica Config
     - name: gitops-deprovision-db2u-replica-database-manage
       runAfter:
@@ -2528,7 +2524,7 @@ spec:
           values: [""]
         - input: "$(params.mas_edition)"
           operator: in
-          values: ["essentials-maintenance", "standard", "premium"]
+          values: ["essentials-maintenance", "standard", "premium", "essentials-inspection", "essentials-space-management", "essentials-lease-management", "essentials-capital-planning"]
   
     # 7. IoT Deprovision
     # -------------------------------------------------------------------------
