[patch] update default condition

--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -248,7 +248,7 @@ spec:
       default: "2Gi"
     - name: additional_resources_install
       type: string
-      default: "false"
+      default: ""
     - name: additional_resources_instances
       type: string
       default: ""
