--- a/tekton/src/tasks/gitops/gitops-suite.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-suite.yml.j2
@@ -141,7 +141,7 @@ spec:
       default: ""
     - name: additional_resources_install
       type: string
-      default: "false"
+      default: ""
     - name: additional_resources_instances
       type: string
       default: ""
