--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -126,7 +126,7 @@ spec:
       type: string
       default: ''
 
-    # iac-mskdc  params
+    # iac-msk params
     - name: msk_kafka_version
       type: string
       default: ''
@@ -150,6 +150,91 @@ spec:
     - name: msk_cluster_prefix
       type: string
       default: ''
+
+    # iac-rdsdb2 common params
+    - name: is_rds
+      type: string
+      default: ''
+
+    - name: rds_source
+      type: string
+      default: ''
+
+    # iac-rdsdb2 manage params
+    - name: manage_db2_instance_class
+      type: string
+      default: ''
+
+    - name: manage_db2_storage_type
+      type: string
+      default: ''
+
+    - name: manage_allocated_storage
+      type: string
+      default: ''
+
+    - name: manage_jdbc_connection_url_additional_params
+      type: string
+      default: ''
+
+    - name: manage_replica_db
+      type: string
+      default: ''
+
+    - name: manage_db2_combine_properties
+      type: string
+      default: ''
+
+    # iac-rdsdb2 iot params
+    - name: iot_db2_instance_class
+      type: string
+      default: ''
+
+    - name: iot_db2_storage_type
+      type: string
+      default: ''
+
+    - name: iot_allocated_storage
+      type: string
+      default: ''
+
+    - name: iot_jdbc_connection_url_additional_params
+      type: string
+      default: ''
+
+    - name: iot_replica_db
+      type: string
+      default: ''
+
+    - name: iot_db2_combine_properties
+      type: string
+      default: ''
+
+    # iac-rdsdb2 facilities params
+    - name: facilities_db2_instance_class
+      type: string
+      default: ''
+
+    - name: facilities_db2_storage_type
+      type: string
+      default: ''
+
+    - name: facilities_allocated_storage
+      type: string
+      default: ''
+
+    - name: facilities_jdbc_connection_url_additional_params
+      type: string
+      default: ''
+
+    - name: facilities_replica_db
+      type: string
+      default: ''
+
+    - name: facilities_db2_combine_properties
+      type: string
+      default: ''
+
 
 
   workspaces:
@@ -348,13 +433,94 @@ spec:
         - name: msk_cluster_prefix
           value: $(params.msk_cluster_prefix)
 
-    # Task 4: Generate Common Files (Runs after EFS/S3/MSK tasks complete/skip)
+    # Task 4: Provision RDS-DB2 (Conditional - runs if is_msk=true)
+    # -------------------------------------------------------------------------
+    - name: gitops-iac-provision-rdsdb2
+      when:
+        - input: "$(params.is_rds)"
+          operator: in
+          values: ["true"]
+      runAfter:
+        - gitops-iac-config
+      taskRef:
+        name: gitops-iac-provision-rdsdb2
+      workspaces:
+        - name: configs
+          workspace: configs
+      params:
+        - name: cluster_name
+          value: $(params.cluster_name)
+        - name: account
+          value: $(params.account)
+        - name: mas_instance_id
+          value: $(params.mas_instance_id)
+        - name: cluster_url
+          value: $(params.cluster_url)
+        - name: git_branch
+          value: $(params.git_branch)
+        - name: github_org
+          value: $(params.github_org)
+        - name: github_repo
+          value: $(params.github_repo)
+        - name: github_host
+          value: $(params.github_host)
+        - name: region_name
+          value: $(params.region_name)
+
+        - name: rds_source
+          value: $(params.msk_source)
+
+        # iac-rdsdb2 manage params
+        - name: manage_db2_instance_class
+          value: $(params.manage_db2_instance_class)
+        - name: manage_db2_storage_type
+          value: $(params.manage_db2_storage_type)
+        - name: manage_allocated_storage
+          value: $(params.manage_allocated_storage)
+        - name: manage_jdbc_connection_url_additional_params
+          value: $(params.manage_jdbc_connection_url_additional_params)
+        - name: manage_replica_db
+          value: $(params.manage_replica_db)
+        - name: manage_db2_combine_properties
+          value: $(params.manage_db2_combine_properties)
+
+        # iac-rdsdb2 iot params
+        - name: iot_db2_instance_class
+          value: $(params.iot_db2_instance_class)
+        - name: iot_db2_storage_type
+          value: $(params.iot_db2_storage_type)
+        - name: iot_allocated_storage
+          value: $(params.iot_allocated_storage)
+        - name: iot_jdbc_connection_url_additional_params
+          value: $(params.iot_jdbc_connection_url_additional_params)
+        - name: iot_replica_db
+          value: $(params.iot_replica_db)
+        - name: iot_db2_combine_properties
+          value: $(params.iot_db2_combine_properties)
+
+        # iac-rdsdb2 facilities params
+        - name: facilities_db2_instance_class
+          value: $(params.facilities_db2_instance_class)
+        - name: facilities_db2_storage_type
+          value: $(params.facilities_db2_storage_type)
+        - name: facilities_allocated_storage
+          value: $(params.facilities_allocated_storage)
+        - name: facilities_jdbc_connection_url_additional_params
+          value: $(params.facilities_jdbc_connection_url_additional_params)
+        - name: facilities_replica_db
+          value: $(params.facilities_replica_db)
+        - name: facilities_db2_combine_properties
+          value: $(params.facilities_db2_combine_properties)
+
+
+    # Task 5: Generate Common Files (Runs after EFS/S3/MSK/RDS-DB2 tasks complete/skip)
     # -------------------------------------------------------------------------
     - name: gitops-iac-generate-common-files
       runAfter:
         - gitops-iac-provision-efs
         - gitops-iac-provision-s3
         - gitops-iac-provision-msk
+        - gitops-iac-provision-rdsdb2
       taskRef:
         name: gitops-iac-generate-common-files
       workspaces:
@@ -444,7 +610,7 @@ spec:
         - name: msk_cluster_prefix
           value: $(params.msk_cluster_prefix)
 
-    # Task 5: Manage PR (Always runs last)
+    # Task 6: Manage PR (Always runs last)
     # -------------------------------------------------------------------------
     - name: gitops-iac-manage-pr
       runAfter:
