--- a/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-iac-pipeline.yml.j2
@@ -154,84 +154,84 @@ spec:
     # iac-rdsdb2 common params
     - name: is_rds
       type: string
-      default: ''
+      default: 'false'
 
     - name: rds_source
       type: string
       default: ''
 
     # iac-rdsdb2 manage params
-    - name: manage_db2_instance_class
+    - name: rds_manage_db2_instance_class
       type: string
       default: ''
 
-    - name: manage_db2_storage_type
+    - name: rds_manage_db2_storage_type
       type: string
       default: ''
 
-    - name: manage_allocated_storage
+    - name: rds_manage_allocated_storage
       type: string
       default: ''
 
-    - name: manage_jdbc_connection_url_additional_params
+    - name: rds_manage_jdbc_connection_url_additional_params
       type: string
       default: ''
 
-    - name: manage_replica_db
+    - name: rds_manage_replica_db
       type: string
       default: ''
 
-    - name: manage_db2_combine_properties
+    - name: rds_manage_db2_combine_properties
       type: string
       default: ''
 
     # iac-rdsdb2 iot params
-    - name: iot_db2_instance_class
+    - name: rds_iot_db2_instance_class
       type: string
       default: ''
 
-    - name: iot_db2_storage_type
+    - name: rds_iot_db2_storage_type
       type: string
       default: ''
 
-    - name: iot_allocated_storage
+    - name: rds_iot_allocated_storage
       type: string
       default: ''
 
-    - name: iot_jdbc_connection_url_additional_params
+    - name: rds_iot_jdbc_connection_url_additional_params
       type: string
       default: ''
 
-    - name: iot_replica_db
+    - name: rds_iot_replica_db
       type: string
       default: ''
 
-    - name: iot_db2_combine_properties
+    - name: rds_iot_db2_combine_properties
       type: string
       default: ''
 
     # iac-rdsdb2 facilities params
-    - name: facilities_db2_instance_class
+    - name: rds_facilities_db2_instance_class
       type: string
       default: ''
 
-    - name: facilities_db2_storage_type
+    - name: rds_facilities_db2_storage_type
       type: string
       default: ''
 
-    - name: facilities_allocated_storage
+    - name: rds_facilities_allocated_storage
       type: string
       default: ''
 
-    - name: facilities_jdbc_connection_url_additional_params
+    - name: rds_facilities_jdbc_connection_url_additional_params
       type: string
       default: ''
 
-    - name: facilities_replica_db
+    - name: rds_facilities_replica_db
       type: string
       default: ''
 
-    - name: facilities_db2_combine_properties
+    - name: rds_facilities_db2_combine_properties
       type: string
       default: ''
 
@@ -468,49 +468,50 @@ spec:
           value: $(params.region_name)
 
         - name: rds_source
-          value: $(params.msk_source)
+          value: $(params.rds_source)
 
         # iac-rdsdb2 manage params
-        - name: manage_db2_instance_class
-          value: $(params.manage_db2_instance_class)
-        - name: manage_db2_storage_type
-          value: $(params.manage_db2_storage_type)
-        - name: manage_allocated_storage
-          value: $(params.manage_allocated_storage)
-        - name: manage_jdbc_connection_url_additional_params
-          value: $(params.manage_jdbc_connection_url_additional_params)
-        - name: manage_replica_db
-          value: $(params.manage_replica_db)
-        - name: manage_db2_combine_properties
-          value: $(params.manage_db2_combine_properties)
+        - name: rds_manage_db2_instance_class
+          value: $(params.rds_manage_db2_instance_class)
+        - name: rds_manage_db2_storage_type
+          value: $(params.rds_manage_db2_storage_type)
+        - name: rds_manage_allocated_storage
+          value: $(params.rds_manage_allocated_storage)
+        - name: rds_manage_jdbc_connection_url_additional_params
+          value: $(params.rds_manage_jdbc_connection_url_additional_params)
+        - name: rds_manage_replica_db
+          value: $(params.rds_manage_replica_db)
+        - name: rds_manage_db2_combine_properties
+          value: $(params.rds_manage_db2_combine_properties)
 
         # iac-rdsdb2 iot params
-        - name: iot_db2_instance_class
-          value: $(params.iot_db2_instance_class)
-        - name: iot_db2_storage_type
-          value: $(params.iot_db2_storage_type)
-        - name: iot_allocated_storage
-          value: $(params.iot_allocated_storage)
-        - name: iot_jdbc_connection_url_additional_params
-          value: $(params.iot_jdbc_connection_url_additional_params)
-        - name: iot_replica_db
-          value: $(params.iot_replica_db)
-        - name: iot_db2_combine_properties
-          value: $(params.iot_db2_combine_properties)
+        - name: rds_iot_db2_instance_class
+          value: $(params.rds_iot_db2_instance_class)
+        - name: rds_iot_db2_storage_type
+          value: $(params.rds_iot_db2_storage_type)
+        - name: rds_iot_allocated_storage
+          value: $(params.rds_iot_allocated_storage)
+        - name: rds_iot_jdbc_connection_url_additional_params
+          value: $(params.rds_iot_jdbc_connection_url_additional_params)
+        - name: rds_iot_replica_db
+          value: $(params.rds_iot_replica_db)
+        - name: rds_iot_db2_combine_properties
+          value: $(params.rds_iot_db2_combine_properties)
 
         # iac-rdsdb2 facilities params
-        - name: facilities_db2_instance_class
-          value: $(params.facilities_db2_instance_class)
-        - name: facilities_db2_storage_type
-          value: $(params.facilities_db2_storage_type)
-        - name: facilities_allocated_storage
-          value: $(params.facilities_allocated_storage)
-        - name: facilities_jdbc_connection_url_additional_params
-          value: $(params.facilities_jdbc_connection_url_additional_params)
-        - name: facilities_replica_db
-          value: $(params.facilities_replica_db)
-        - name: facilities_db2_combine_properties
-          value: $(params.facilities_db2_combine_properties)
+        - name: rds_facilities_db2_instance_class
+          value: $(params.rds_facilities_db2_instance_class)
+        - name: rds_facilities_db2_storage_type
+          value: $(params.rds_facilities_db2_storage_type)
+        - name: rds_facilities_allocated_storage
+          value: $(params.rds_facilities_allocated_storage)
+        - name: rds_facilities_jdbc_connection_url_additional_params
+          value: $(params.rds_facilities_jdbc_connection_url_additional_params)
+        - name: rds_facilities_replica_db
+          value: $(params.rds_facilities_replica_db)
+        - name: rds_facilities_db2_combine_properties
+          value: $(params.rds_facilities_db2_combine_properties)
+
 
 
     # Task 5: Generate Common Files (Runs after EFS/S3/MSK/RDS-DB2 tasks complete/skip)
@@ -551,6 +552,8 @@ spec:
           value: $(params.is_s3)
         - name: is_msk
           value: $(params.is_msk)
+        - name: is_rds
+          value: $(params.is_rds)
 
       # EFS parameters (needed for variable computation)
         - name: efs_manage_db2_performance_mode
@@ -610,6 +613,44 @@ spec:
         - name: msk_cluster_prefix
           value: $(params.msk_cluster_prefix)
 
+        # iac-rdsdb2 params
+        - name: rds_manage_db2_instance_class
+          value: $(params.rds_manage_db2_instance_class)
+        - name: rds_manage_db2_storage_type
+          value: $(params.rds_manage_db2_storage_type)
+        - name: rds_manage_allocated_storage
+          value: $(params.rds_manage_allocated_storage)
+        - name: rds_manage_jdbc_connection_url_additional_params
+          value: $(params.rds_manage_jdbc_connection_url_additional_params)
+        - name: rds_manage_replica_db
+          value: $(params.rds_manage_replica_db)
+        - name: rds_manage_db2_combine_properties
+          value: $(params.rds_manage_db2_combine_properties)
+        - name: rds_iot_db2_instance_class
+          value: $(params.rds_iot_db2_instance_class)
+        - name: rds_iot_db2_storage_type
+          value: $(params.rds_iot_db2_storage_type)
+        - name: rds_iot_allocated_storage
+          value: $(params.rds_iot_allocated_storage)
+        - name: rds_iot_jdbc_connection_url_additional_params
+          value: $(params.rds_iot_jdbc_connection_url_additional_params)
+        - name: rds_iot_replica_db
+          value: $(params.rds_iot_replica_db)
+        - name: rds_iot_db2_combine_properties
+          value: $(params.rds_iot_db2_combine_properties)
+        - name: rds_facilities_db2_instance_class
+          value: $(params.rds_facilities_db2_instance_class)
+        - name: rds_facilities_db2_storage_type
+          value: $(params.rds_facilities_db2_storage_type)
+        - name: rds_facilities_allocated_storage
+          value: $(params.rds_facilities_allocated_storage)
+        - name: rds_facilities_jdbc_connection_url_additional_params
+          value: $(params.rds_facilities_jdbc_connection_url_additional_params)
+        - name: rds_facilities_replica_db
+          value: $(params.rds_facilities_replica_db)
+        - name: rds_facilities_db2_combine_properties
+          value: $(params.rds_facilities_db2_combine_properties)
+
     # Task 6: Manage PR (Always runs last)
     # -------------------------------------------------------------------------
     - name: gitops-iac-manage-pr
@@ -641,3 +682,5 @@ spec:
           value: $(params.is_s3)
         - name: is_msk
           value: $(params.is_msk)
+        - name: is_rds
+          value: $(params.is_rds)
