--- a/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
@@ -108,51 +108,51 @@ spec:
         value: $(params.mas_instance_id)
       - name: RDS_SOURCE
         value: $(params.rds_source)
-      - name: MANAGE_DB2_INSTANCE_CLASS
-        value: $(params.manage_db2_instance_class)
-      - name: MANAGE_DB2_STORAGE_TYPE
-        value: $(params.manage_db2_storage_type)
-      - name: MANAGE_ALLOCATED_STORAGE
-        value: $(params.manage_allocated_storage)
-      - name: MANAGE_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
-        value: $(params.manage_jdbc_connection_url_additional_params)
-      - name: MANAGE_REPLICA_DB
-        value: $(params.manage_replica_db)
-      - name: MANAGE_DB2_COMBINE_PROPERTIES
-        value: $(params.manage_db2_combine_properties)
+      - name: RDS_MANAGE_DB2_INSTANCE_CLASS
+        value: $(params.rds_manage_db2_instance_class)
+      - name: RDS_MANAGE_DB2_STORAGE_TYPE
+        value: $(params.rds_manage_db2_storage_type)
+      - name: RDS_MANAGE_ALLOCATED_STORAGE
+        value: $(params.rds_manage_allocated_storage)
+      - name: RDS_MANAGE_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
+        value: $(params.rds_manage_jdbc_connection_url_additional_params)
+      - name: RDS_MANAGE_REPLICA_DB
+        value: $(params.rds_manage_replica_db)
+      - name: RDS_MANAGE_DB2_COMBINE_PROPERTIES
+        value: $(params.rds_manage_db2_combine_properties)
 
-      - name: IOT_DB2_INSTANCE_CLASS
-        value: $(params.iot_db2_instance_class)
-      - name: IOT_DB2_STORAGE_TYPE
-        value: $(params.iot_db2_storage_type)
-      - name: IOT_ALLOCATED_STORAGE
-        value: $(params.iot_allocated_storage)
-      - name: IOT_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
-        value: $(params.iot_jdbc_connection_url_additional_params)
-      - name: IOT_REPLICA_DB
-        value: $(params.iot_replica_db)
-      - name: IOT_DB2_COMBINE_PROPERTIES
-        value: $(params.iot_db2_combine_properties)
+      - name: RDS_IOT_DB2_INSTANCE_CLASS
+        value: $(params.rds_iot_db2_instance_class)
+      - name: RDS_IOT_DB2_STORAGE_TYPE
+        value: $(params.rds_iot_db2_storage_type)
+      - name: RDS_IOT_ALLOCATED_STORAGE
+        value: $(params.rds_iot_allocated_storage)
+      - name: RDS_IOT_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
+        value: $(params.rds_iot_jdbc_connection_url_additional_params)
+      - name: RDS_IOT_REPLICA_DB
+        value: $(params.rds_iot_replica_db)
+      - name: RDS_IOT_DB2_COMBINE_PROPERTIES
+        value: $(params.rds_iot_db2_combine_properties)
 
-      - name: FACILITIES_DB2_INSTANCE_CLASS
-        value: $(params.facilities_db2_instance_class)
-      - name: FACILITIES_DB2_STORAGE_TYPE
-        value: $(params.facilities_db2_storage_type)
-      - name: FACILITIES_ALLOCATED_STORAGE
-        value: $(params.facilities_allocated_storage)
-      - name: FACILITIES_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
-        value: $(params.facilities_jdbc_connection_url_additional_params)
-      - name: FACILITIES_REPLICA_DB
-        value: $(params.facilities_replica_db)
-      - name: FACILITIES_DB2_COMBINE_PROPERTIES
-        value: $(params.facilities_db2_combine_properties)
+      - name: RDS_FACILITIES_DB2_INSTANCE_CLASS
+        value: $(params.rds_facilities_db2_instance_class)
+      - name: RDS_FACILITIES_DB2_STORAGE_TYPE
+        value: $(params.rds_facilities_db2_storage_type)
+      - name: RDS_FACILITIES_ALLOCATED_STORAGE
+        value: $(params.rds_facilities_allocated_storage)
+      - name: RDS_FACILITIES_JDBC_CONNECTION_URL_ADDITIONAL_PARAMS
+        value: $(params.rds_facilities_jdbc_connection_url_additional_params)
+      - name: RDS_FACILITIES_REPLICA_DB
+        value: $(params.rds_facilities_replica_db)
+      - name: RDS_FACILITIES_DB2_COMBINE_PROPERTIES
+        value: $(params.rds_facilities_db2_combine_properties)
 
     envFrom:
       - configMapRef:
           name: environment-properties
           optional: true
       - secretRef:
-          name: secure-properties
+          name: secure-propertiess
 
   steps:
     - name: provision-rdsdb2
