corrected variable names

--- a/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
@@ -27,58 +27,60 @@ spec:
     - name: rds_source
       type: string
       default: ""
-    - name: manage_db2_instance_class
+    - name: rds_manage_db2_instance_class
       type: string
       default: ""
-    - name: manage_db2_storage_type
+    - name: rds_manage_db2_storage_type
       type: string
       default: ""
-    - name: manage_allocated_storage
+    - name: rds_manage_allocated_storage
       type: string
       default: ""
-    - name: manage_jdbc_connection_url_additional_params
+    - name: rds_manage_jdbc_connection_url_additional_params
       type: string
       default: ""
-    - name: manage_replica_db
+    - name: rds_manage_replica_db
       type: string
       default: ""
-    - name: manage_db2_combine_properties
+    - name: rds_manage_db2_combine_properties
       type: string
       default: ""
-    - name: iot_db2_instance_class
+
+    - name: rds_iot_db2_instance_class
       type: string
       default: ""
-    - name: iot_db2_storage_type
+    - name: rds_iot_db2_storage_type
       type: string
       default: ""
-    - name: iot_allocated_storage
+    - name: rds_iot_allocated_storage
       type: string
       default: ""
-    - name: iot_jdbc_connection_url_additional_params
+    - name: rds_iot_jdbc_connection_url_additional_params
       type: string
       default: ""
-    - name: iot_replica_db
+    - name: rds_iot_replica_db
       type: string
       default: ""
-    - name: iot_db2_combine_properties
+    - name: rds_iot_db2_combine_properties
       type: string
       default: ""
-    - name: facilities_db2_instance_class
+
+    - name: rds_facilities_db2_instance_class
       type: string
       default: ""
-    - name: facilities_db2_storage_type
+    - name: rds_facilities_db2_storage_type
       type: string
       default: ""
-    - name: facilities_allocated_storage
+    - name: rds_facilities_allocated_storage
       type: string
       default: ""
-    - name: facilities_jdbc_connection_url_additional_params
+    - name: rds_facilities_jdbc_connection_url_additional_params
       type: string
       default: ""
-    - name: facilities_replica_db
+    - name: rds_facilities_replica_db
       type: string
       default: ""
-    - name: facilities_db2_combine_properties
+    - name: rds_facilities_db2_combine_properties
       type: string
       default: ""
 
