corrected variable names

--- a/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-iac-provision-rdsdb2.yml.j2
@@ -170,7 +170,7 @@ spec:
           eval $CMD
           exit $?
       command:
-        - /bin/sh\
+        - /bin/sh
         - -c
       imagePullPolicy: IfNotPresent
       image: quay.io/ibmmas/cli:latest
