[patch] fix mobile fvt tasks orders

--- a/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase1-setup.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase1-setup.yml.j2
@@ -30,6 +30,8 @@
     - input: "$(params.fvt_digest_mobile_pytest)"
       operator: notin
       values: [""]
+  runAfter:
+    - pipeline-start
 
 
 - name: mobile-pytest-requests
