--- a/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase5-apps.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase5-apps.yml.j2
@@ -19,3 +19,14 @@
     - mobile-pytest-ic
     - mobile-pytest-ir
     - mobile-pytest-it
+
+- name: mobile-pytest-collaborate
+  {{ lookup('template', 'taskdefs/fvt-mobile/common/taskref-pytest.yml.j2') | indent(2) }}
+  params:
+    {{ lookup('template', 'taskdefs/fvt-mobile/common/params-pytest.yml.j2') | indent(4) }}
+    - name: fvt_test_suite
+      value: mobile-api-collaborate
+  runAfter:
+    - mobile-pytest-ic
+    - mobile-pytest-ir
+    - mobile-pytest-it
