--- a/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-instance.yml.j2
@@ -232,6 +232,9 @@ spec:
     - name: application_configuration
       type: string
       default: "true"
+    - name: additional_resources_install
+      type: string
+      default: "false"
     - name: additional_resources_instances
       type: string
       default: ""
@@ -468,6 +471,8 @@ spec:
           value: $(params.additional_vpn)
         - name: application_configuration
           value: $(params.application_configuration)
+        - name: additional_resources_install
+          value: $(params.additional_resources_install)
         - name: additional_resources_instances
           value: $(params.additional_resources_instances)
         - name: extensions
