[patch] Check AISERVICE_INSTANCE_ID before running manage ai tests

--- a/image/cli/masfvt/templates/mas-fvt-manage-ai.yml.j2
+++ b/image/cli/masfvt/templates/mas-fvt-manage-ai.yml.j2
@@ -27,6 +27,9 @@ spec:
       value: "{{ mas_workspace_id }}"
     - name: mas_appws_components
       value: "{{ mas_appws_components }}"
+    # AI Service Info
+    - name: aiservice_instance_id
+      value: "{{ aiservice_instance_id }}"
     # Registry
     - name: fvt_image_registry
       value: "{{ fvt_image_registry }}"
