--- a/tekton/src/pipelines/mas-fvt-manage-ai.yml.j2
+++ b/tekton/src/pipelines/mas-fvt-manage-ai.yml.j2
@@ -30,6 +30,9 @@ spec:
     - name: mas_appws_components
       type: string
       default: ""
+    - name: aiservice_instance_id
+      type: string
+      default: ""
 
     # FVT Configuration
     - name: fvt_image_registry
