Changed aibroker_instance_id to aiservice_instance_id

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-kmodel.yaml.j2
@@ -1,7 +1,7 @@
-merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AIBROKER_INSTANCE_ID }}"
+merge-key: "{{ ACCOUNT_ID }}/{{ CLUSTER_ID }}/{{ AISERVICE_INSTANCE_ID }}"
 
 ibm_kmodel:
-  aibroker_instance_id: {{ AIBROKER_INSTANCE_ID }}
+  aiservice_instance_id: {{ AISERVICE_INSTANCE_ID }}
   aibroker_internal_tls: "{{ AIBROKER_INTERNAL_TLS }}"
 
   aibroker_namespace: "{{ AIBROKER_NAMESPACE }}"
