--- a/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-kmodel.yml.j2
@@ -27,7 +27,7 @@ spec:
     - name: github_host
       type: string
 
-    - name: aibroker_instance_id
+    - name: aiservice_instance_id
       type: string
     - name: aibroker_internal_tls
       type: string
@@ -104,8 +104,8 @@ spec:
         value: $(params.github_host)
       - name: GITHUB_REPO
         value: $(params.github_repo)
-      - name: AIBROKER_INSTANCE_ID
-        value: $(params.aibroker_instance_id)
+      - name: AISERVICE_INSTANCE_ID
+        value: $(params.aiservice_instance_id)
       - name: AIBROKER_INTERNAL_TLS
         value: $(params.aibroker_internal_tls)
       - name: AIBROKER_NAMESPACE
